// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-block;
  outline: 0 !important;
  color-scheme: light dark !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  padding: 0;
  margin: 0;
  outline: 0;
  border: 0;
  text-align: start;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  justify-content: flex-start;
}
.root .switch::-moz-focus-inner {
  border: 0;
}
.root:focus-visible .switch {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.switch {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #010205;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
@media(hover:hover) {
  .root:hover .switch {
    border-color: #010205;
    background-color: transparent;
  }
  .root:hover .switch .toggle {
    background-color: #010205;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":false,"checked":false,"disabled":true,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-block;
  outline: 0 !important;
  color-scheme: light dark !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  padding: 0;
  margin: 0;
  outline: 0;
  border: 0;
  text-align: start;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;
  cursor: auto;
  justify-content: flex-start;
}
.root .switch::-moz-focus-inner {
  border: 0;
}
.root:focus-visible .switch {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.switch {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #949598;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  color: #949598;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: block;
  outline: 0 !important;
  color-scheme: light dark !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  padding: 0;
  margin: 0;
  outline: 0;
  border: 0;
  text-align: start;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  justify-content: space-between;
}
.root .switch::-moz-focus-inner {
  border: 0;
}
.root:focus-visible .switch {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.switch {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #010205;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
@media(hover:hover) {
  .root:hover .switch {
    border-color: #010205;
    background-color: transparent;
  }
  .root:hover .switch .toggle {
    background-color: #010205;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":true,"theme":"light"} 1`] = `
":host {
  display: block;
  outline: 0 !important;
  color-scheme: light dark !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  padding: 0;
  margin: 0;
  outline: 0;
  border: 0;
  text-align: start;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;
  cursor: auto;
  justify-content: space-between;
}
.root .switch::-moz-focus-inner {
  border: 0;
}
.root:focus-visible .switch {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.switch {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: transparent;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.spinner {
  position: absolute;
  top: -4px;
  left: -4px;
  width: 28px;
  height: 28px;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  color: #949598;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":true,"loading":true,"theme":"dark"} 1`] = `
":host {
  display: block;
  outline: 0 !important;
  color-scheme: light dark !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  padding: 0;
  margin: 0;
  outline: 0;
  border: 0;
  text-align: start;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;
  cursor: auto;
  justify-content: space-between;
}
.root .switch::-moz-focus-inner {
  border: 0;
}
.root:focus-visible .switch {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.switch {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  box-sizing: border-box;
  border: 2px solid #7E7F82;
  border-radius: 14px;
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: transparent;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.spinner {
  position: absolute;
  top: -4px;
  left: -4px;
  width: 28px;
  height: 28px;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  color: #7E7F82;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":true,"loading":true,"theme":"light"} 1`] = `
":host {
  display: block;
  outline: 0 !important;
  color-scheme: light dark !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  padding: 0;
  margin: 0;
  outline: 0;
  border: 0;
  text-align: start;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;
  cursor: auto;
  justify-content: space-between;
}
.root .switch::-moz-focus-inner {
  border: 0;
}
.root:focus-visible .switch {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.switch {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: transparent;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.spinner {
  position: absolute;
  top: -4px;
  left: -4px;
  width: 28px;
  height: 28px;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  color: #949598;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":true,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: block;
  outline: 0 !important;
  color-scheme: light dark !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  padding: 0;
  margin: 0;
  outline: 0;
  border: 0;
  text-align: start;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  justify-content: space-between;
}
.root .switch::-moz-focus-inner {
  border: 0;
}
.root:focus-visible .switch {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.switch {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  box-sizing: border-box;
  border: 2px solid #197E10;
  border-radius: 14px;
  background-color: #197E10;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #FFF;
  transform: translate3d(20px, 0, 0);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
@media(hover:hover) {
  .root:hover .switch {
    border-color: #0E4809;
    background-color: #0E4809;
  }
  .root:hover .switch .toggle {
    background-color: #FFF;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"left","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-block;
  outline: 0 !important;
  color-scheme: light dark !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  padding: 0;
  margin: 0;
  outline: 0;
  border: 0;
  text-align: start;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  justify-content: flex-start;
}
.root .switch::-moz-focus-inner {
  border: 0;
}
.root:focus-visible .switch {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.switch {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #010205;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: -1;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
@media(hover:hover) {
  .root:hover .switch {
    border-color: #010205;
    background-color: transparent;
  }
  .root:hover .switch .toggle {
    background-color: #010205;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"right","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-block;
  outline: 0 !important;
  color-scheme: light dark !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  padding: 0;
  margin: 0;
  outline: 0;
  border: 0;
  text-align: start;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  justify-content: flex-start;
}
.root .switch::-moz-focus-inner {
  border: 0;
}
.root:focus-visible .switch {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.switch {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #010205;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
@media(hover:hover) {
  .root:hover .switch {
    border-color: #010205;
    background-color: transparent;
  }
  .root:hover .switch .toggle {
    background-color: #010205;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"start","hideLabel":true,"stretch":false,"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-block;
  outline: 0 !important;
  color-scheme: light dark !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  padding: 0;
  margin: 0;
  outline: 0;
  border: 0;
  text-align: start;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  justify-content: flex-start;
}
.root .switch::-moz-focus-inner {
  border: 0;
}
.root:focus-visible .switch {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.switch {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #010205;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: -1;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover .switch {
    border-color: #010205;
    background-color: transparent;
  }
  .root:hover .switch .toggle {
    background-color: #010205;
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":{"base":"start","xs":"end","s":"start","m":"end","l":"start","xl":"end"},"hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"stretch":{"base":false,"xs":true,"s":false,"m":true,"l":false,"xl":true},"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-block;
  outline: 0 !important;
  color-scheme: light dark !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
@media(min-width:480px) {
  :host {
    width: 100% !important;
  }
}

@media(min-width:760px) {
  :host {
    width: auto !important;
    vertical-align: top !important;
  }
}

@media(min-width:1000px) {
  :host {
    width: 100% !important;
  }
}

@media(min-width:1300px) {
  :host {
    width: auto !important;
    vertical-align: top !important;
  }
}

@media(min-width:1760px) {
  :host {
    width: 100% !important;
  }
}

.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  padding: 0;
  margin: 0;
  outline: 0;
  border: 0;
  text-align: start;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  justify-content: flex-start;
}
.root .switch::-moz-focus-inner {
  border: 0;
}
.root:focus-visible .switch {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
.switch {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #010205;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: -1;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .root {
    justify-content: space-between;
  }
  .label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: 2px;
  }
}

@media(min-width:760px) {
  .root {
    justify-content: flex-start;
  }
  .label {
    order: -1;
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .root {
    justify-content: space-between;
  }
  .label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: 2px;
  }
}

@media(min-width:1300px) {
  .root {
    justify-content: flex-start;
  }
  .label {
    order: -1;
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .root {
    justify-content: space-between;
  }
  .label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: 2px;
  }
}

@media(hover:hover) {
  .root:hover .switch {
    border-color: #010205;
    background-color: transparent;
  }
  .root:hover .switch .toggle {
    background-color: #010205;
  }
}
"
`;
